Revert "maybe like this"
This reverts commit 62a961f8743e0fe4c04568739110b4bc06341f85.

--- a/src/stdlib.make.in
+++ b/src/stdlib.make.in
@@ -4,7 +4,7 @@
 LEAN_BASH ?= /usr/bin/env bash
 SHELL := $(LEAN_BASH) -eo pipefail
 
-export LEAN ?= "${PREV_STAGE}/bin/lean${PREV_STAGE_CMAKE_EXECUTABLE_SUFFIX}"
+LEAN ?= "${PREV_STAGE}/bin/lean${PREV_STAGE_CMAKE_EXECUTABLE_SUFFIX}"
 
 # any absolute path to the stdlib breaks the Makefile
 export LEAN_PATH=
