--- a/src/stdlib.make.in
+++ b/src/stdlib.make.in
@@ -35,6 +35,7 @@ endif
 Init:
 	@mkdir -p "${LIB}/lean/Lean" "${LIB}/lean/Lake"
 # Use `+` to use the Make jobserver with `leanmake` for parallelized builds
+# Build .oleans of downstream libraries as well for better parallelism
 	+"${LEAN_BIN}/leanmake" objs lib PKG=Init $(LEANMAKE_OPTS) LEANC_OPTS+=-DLEAN_EXPORTING \
 	  EXTRA_SRC_ROOTS="Lean Lean.lean lake/Lake lake/Lake.lean"
 
