--- a/src/lake/examples/reverse-ffi/Makefile
+++ b/src/lake/examples/reverse-ffi/Makefile
@@ -39,7 +39,7 @@ endif
 ifeq ($(OS),Windows_NT)
 SHLIB_PREFIX :=
 SHLIB_EXT := dll
-LEAN_SHLIB := $(LEAN_SYSROOT)/bin/libleanshared.$(SHLIB_EXT)
+LEAN_SHLIB_ROOT := $(LEAN_SYSROOT)/bin
 else
 SHLIB_PREFIX := lib
 # Add current directory to loader path (default on Windows)
@@ -50,11 +50,11 @@ else
 LINK_FLAGS_LOCAL := -Wl,-rpath,'$${ORIGIN}'
 SHLIB_EXT := so
 endif
-LEAN_SHLIB=$(LEAN_LIBDIR)/libleanshared.$(SHLIB_EXT)
+LEAN_SHLIB_ROOT := $(LEAN_LIBDIR)
 endif
 
 $(OUT_DIR)/main-local: main.c lake | $(OUT_DIR)
-	cp -f $(LEAN_SHLIB) lib/.lake/build/lib/$(SHLIB_PREFIX)RFFI.$(SHLIB_EXT) $(OUT_DIR)
+	cp -f $(LEAN_SHLIB_ROOT)/*.$(SHLIB_EXT) lib/.lake/build/lib/$(SHLIB_PREFIX)RFFI.$(SHLIB_EXT) $(OUT_DIR)
 	cc -o $@ $< -I $(LEAN_SYSROOT)/include -L $(OUT_DIR) -lRFFI -lInit_shared -lleanshared $(LINK_FLAGS_LOCAL)
 
 run-local: $(OUT_DIR)/main-local
