--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -558,16 +558,16 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Emscripten")
 else()
   add_custom_target(Init_shared ALL
     WORKING_DIRECTORY ${LEAN_SOURCE_DIR}
-    DEPENDS make_stdlib leanrt_initial-exec
     COMMAND $(MAKE) -f ${CMAKE_BINARY_DIR}/stdlib.make Init_shared
     VERBATIM)
 
   add_custom_target(leanshared ALL
     WORKING_DIRECTORY ${LEAN_SOURCE_DIR}
-    DEPENDS make_stdlib Init_shared leancpp
     COMMAND $(MAKE) -f ${CMAKE_BINARY_DIR}/stdlib.make leanshared
     VERBATIM)
 endif()
+add_dependencies(Init_shared make_stdlib leanrt_initial-exec)
+add_dependencies(leanshared Init_shared leancpp)
 
 if(${STAGE} GREATER 0)
   if(NOT EXISTS ${LEAN_SOURCE_DIR}/lake/Lake.lean)
