--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -421,7 +421,8 @@ jobs:
             progbin="$(file $c | sed "s/.*execfn: '\([^']*\)'.*/\1/")"
             echo bt | $GDB/bin/gdb -q $progbin $c || true
           done
-      # has not been used in a long while
+      # has not been used in a long while, would need to be adapted to new
+      # shared libs
       #- name: Upload coredumps
       #  uses: actions/upload-artifact@v3
       #  if: ${{ failure() && matrix.os == 'ubuntu-latest' }}
