--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -477,6 +477,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
+          # the default is to use a virtual merge commit between the PR and master: just use the PR
+          ref: ${{ github.event.pull_request.head.sha }}
           sparse-checkout: src/Lean
       - name: Check Prelude
         run: |
