--- a/src/lean.mk.in
+++ b/src/lean.mk.in
@@ -103,12 +103,11 @@ ifdef CMAKE_LIKE_OUTPUT
 endif
 	@mkdir -p "$(@D)"
 	$(LEANC) -c -o $@ $< $(LEANC_OPTS) -DLEAN_EXPORTING
-endif
 
 # On Windows, rebuild .o not intended for shared libraries
 # without dllexport because of symbol limit;
 # on other platforms, no point in bothering
-ifeq (CMAKE_SYSTEM_NAME, Windows)
+ifeq (@CMAKE_SYSTEM_NAME@, Windows)
 ifdef LLVM
 $(TEMP_OUT)/%.o: $(BC_OUT)/%.bc
 else
@@ -118,13 +117,10 @@ ifdef CMAKE_LIKE_OUTPUT
 	@echo "[    ] Building $<"
 endif
 	@mkdir -p "$(@D)"
-	LEANC_OPTS=$(LEANC_OPTS);\
-	
 	$(LEANC) -c -o $@ $< $(LEANC_OPTS)
-endif
 else
 $(TEMP_OUT)/%.o: $(TEMP_OUT)/%.o.export
-	ln -sf $@ $<
+	ln -sf $@ $*.o.export
 endif
 
 $(BIN_OUT)/$(BIN_NAME): $(addprefix $(TEMP_OUT)/,$(REL_OS)) | $(BIN_OUT)
@@ -143,23 +139,19 @@ $(LIB_OUT)/$(STATIC_LIB_NAME): $(addprefix $(TEMP_OUT)/,$(REL_OS)) | $(LIB_OUT)
 	@rm -f $@
 	@$(LEAN_AR) rcs $@ $^
 
-ifeq (CMAKE_SYSTEM_NAME, Windows)
-$(LIB_OUT)/$(STATIC_LIB_NAME).export: $(addprefix $(TEMP_OUT)/,$(REL_OS).export) | $(LIB_OUT)
+ifeq (@CMAKE_SYSTEM_NAME@, Windows)
+$(LIB_OUT)/$(STATIC_LIB_NAME).export: $(addprefix $(TEMP_OUT)/,$(REL_OS)) | $(LIB_OUT)
 	@rm -f $@
 	@$(LEAN_AR) rcs $@ $^
 else
 $(LIB_OUT)/$(STATIC_LIB_NAME).export: $(LIB_OUT)/$(STATIC_LIB_NAME)
-	ln -sf $@ $<
+	ln -sf $@ $(STATIC_LIB_NAME)
 endif
 
 clean:
 	rm -rf $(OUT)
 
-ifdef LLVM
-.PRECIOUS: $(C_OUT)/%.c $(BC_OUT)/%.bc
-else
-.PRECIOUS: $(C_OUT)/%.c
-endif
+.PRECIOUS: $(BC_OUT)/%.bc $(C_OUT)/%.c $(TEMP_OUT)/%.o $(TEMP_OUT)/%.o.export
 
 ifndef C_ONLY
 include $(DEPS)
