--- a/src/lean.mk.in
+++ b/src/lean.mk.in
@@ -123,17 +123,13 @@ $(TEMP_OUT)/%.o: $(TEMP_OUT)/%.o.export
 	ln -f $< $@
 endif
 
-$(BIN_OUT)/$(BIN_NAME): $(addprefix $(TEMP_OUT)/,$(REL_OS)) | $(BIN_OUT)
+$(BIN_OUT)/$(BIN_NAME): $(TEMP_OUT)/$(STATIC_LIB_NAME).export | $(BIN_OUT)
 ifdef CMAKE_LIKE_OUTPUT
 	@echo "[    ] Linking $@"
 endif
 # on Windows, must remove binary before writing a new one (since the old one may be in use)
 	@rm -f $@
-ifdef PROFILE
-	\time -f "%U %S" $(LEANC) -o "$@" $^ $(LEANC_OPTS) $(LINK_OPTS) 2>&1 > /dev/null | awk '{ printf "C linking %fs\n", $$1 + $$2 }' > /dev/stderr
-else
-	$(LEANC) -o "$@" $^ $(LEANC_OPTS) $(LINK_OPTS)
-endif
+	$(LEANC) -o "$@" $< $(LEANC_OPTS) $(LINK_OPTS)
 
 ifeq (@CMAKE_SYSTEM_NAME@, Windows)
 $(LIB_OUT)/$(STATIC_LIB_NAME): $(addprefix $(TEMP_OUT)/,$(REL_OS)) | $(LIB_OUT)
