--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -102,6 +102,7 @@ jobs:
                 "name": "Linux fsanitize",
                 "os": "ubuntu-latest",
                 "quick": false,
+                "continue-on-error": true,
                 // turn off custom allocator & symbolic functions to make LSAN do its magic
                 "CMAKE_OPTIONS": "-DLEAN_EXTRA_CXX_FLAGS=-fsanitize=address,undefined -DLEANC_EXTRA_FLAGS='-fsanitize=address,undefined -fsanitize-link-c++-runtime' -DSMALL_ALLOCATOR=OFF -DBSYMBOLIC=OFF",
                 // exclude seriously slow/problematic tests (laketests crash)
@@ -255,6 +256,7 @@ jobs:
       run:
         shell: ${{ matrix.shell || 'nix-shell --run "bash -euxo pipefail {0}"' }}
     name: ${{ matrix.name }}
+    continue-on-error: ${{ matrix.continue-on-error == 'true' }}
     env:
       # must be inside workspace
       CCACHE_DIR: ${{ github.workspace }}/.ccache
