--- a/src/lean.mk.in
+++ b/src/lean.mk.in
@@ -140,7 +140,7 @@ $(LIB_OUT)/$(STATIC_LIB_NAME): $(NAT_OBJS) | $(LIB_OUT)
 	$(file >$@.in) $(foreach O,$^,$(file >>$@.in,"$O"))
 	@$(LEAN_AR) rcs $@ @$@.in
 	@rm -f $@.in
-$(TEMP_OUT)/$(STATIC_LIB_NAME).export: $(addsuffix .export,$(NAT)OBJS)) | $(LIB_OUT)
+$(TEMP_OUT)/$(STATIC_LIB_NAME).export: $(addsuffix .export,$(NAT_OBJS)) | $(LIB_OUT)
 	@rm -f $@
 	$(file >$@.in) $(foreach O,$^,$(file >>$@.in,"$O"))
 	@$(LEAN_AR) rcs $@ @$@.in
