--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -448,6 +448,7 @@ jobs:
     name: Build matrix complete
     runs-on: ubuntu-latest
     needs: build
+    # mark as merely cancelled not failed if builds are cancelled
     if: ${{ !cancelled() }}
     steps:
     - if: contains(needs.*.result, 'failure')
