--- a/src/lean.mk.in
+++ b/src/lean.mk.in
@@ -55,6 +55,7 @@ objs: $(OBJS) $(ALL_NAT_OBJS)
 bin: $(BIN_OUT)/$(BIN_NAME)
 
 lib: $(LIB_OUT)/$(STATIC_LIB_NAME)
+lib.export: $(TEMP_OUT)/$(STATIC_LIB_NAME).export
 
 depends: $(DEPS)
 
@@ -96,6 +97,21 @@ $(BC_OUT)/%.bc: $(OLEAN_OUT)/%.olean
 endif
 
 ifdef LLVM
+$(TEMP_OUT)/%.o.export: $(BC_OUT)/%.bc
+else
+$(TEMP_OUT)/%.o.export: $(C_OUT)/%.c
+endif
+ifdef CMAKE_LIKE_OUTPUT
+	@echo "[    ] Building $<"
+endif
+	@mkdir -p "$(@D)"
+	$(LEANC) -c -o $@ $< $(LEANC_OPTS) -DLEAN_EXPORTING
+
+# On Windows, rebuild .o not intended for shared libraries
+# without dllexport because of symbol limit;
+# on other platforms, no point in bothering
+ifeq (@CMAKE_SYSTEM_NAME@, Windows)
+ifdef LLVM
 $(TEMP_OUT)/%.o: $(BC_OUT)/%.bc
 else
 $(TEMP_OUT)/%.o: $(C_OUT)/%.c
@@ -104,30 +120,27 @@ ifdef CMAKE_LIKE_OUTPUT
 	@echo "[    ] Building $<"
 endif
 	@mkdir -p "$(@D)"
-ifdef PROFILE
-ifdef LLVM
-	\time -f "%U %S" $(LEANC) -c -o $@ $< $(LEANC_OPTS) 2>&1 > /dev/null | awk '{ printf "LLVM bitcode compilation %fs\n", $$1 + $$2 }' > /dev/stderr
-else
-	\time -f "%U %S" $(LEANC) -c -o $@ $< $(LEANC_OPTS) 2>&1 > /dev/null | awk '{ printf "C compilation %fs\n", $$1 + $$2 }' > /dev/stderr
-endif
-else
 	$(LEANC) -c -o $@ $< $(LEANC_OPTS)
+else
+$(TEMP_OUT)/%.o: $(TEMP_OUT)/%.o.export
+	ln -f $< $@
 endif
 
-$(BIN_OUT)/$(BIN_NAME): $(NAT_OBJS) | $(BIN_OUT)
+$(BIN_OUT)/$(BIN_NAME): $(TEMP_OUT)/$(STATIC_LIB_NAME).export | $(BIN_OUT)
 ifdef CMAKE_LIKE_OUTPUT
 	@echo "[    ] Linking $@"
 endif
 # on Windows, must remove binary before writing a new one (since the old one may be in use)
 	@rm -f $@
-ifdef PROFILE
-	\time -f "%U %S" $(LEANC) -o "$@" $^ $(LEANC_OPTS) $(LINK_OPTS) 2>&1 > /dev/null | awk '{ printf "C linking %fs\n", $$1 + $$2 }' > /dev/stderr
-else
-	$(LEANC) -o "$@" $^ $(LEANC_OPTS) $(LINK_OPTS)
-endif
+	$(LEANC) -o "$@" $< $(LEANC_OPTS) $(LINK_OPTS)
 
 ifeq (@CMAKE_SYSTEM_NAME@, Windows)
 $(LIB_OUT)/$(STATIC_LIB_NAME): $(NAT_OBJS) | $(LIB_OUT)
+	@rm -f $@
+	$(file >$@.in) $(foreach O,$^,$(file >>$@.in,"$O"))
+	@$(LEAN_AR) rcs $@ @$@.in
+	@rm -f $@.in
+$(TEMP_OUT)/$(STATIC_LIB_NAME).export: $(addsuffix .export,$(NAT_OBJS)) | $(LIB_OUT)
 	@rm -f $@
 	$(file >$@.in) $(foreach O,$^,$(file >>$@.in,"$O"))
 	@$(LEAN_AR) rcs $@ @$@.in
@@ -137,16 +150,14 @@ $(LIB_OUT)/$(STATIC_LIB_NAME): $(NAT_OBJS) | $(LIB_OUT)
 	@rm -f $@
 # no response file support on macOS, but also no need for them
 	@$(LEAN_AR) rcs $@ $^
+$(TEMP_OUT)/$(STATIC_LIB_NAME).export: $(LIB_OUT)/$(STATIC_LIB_NAME)
+	ln -f $< $@
 endif
 
 clean:
 	rm -rf $(OUT)
 
-ifdef LLVM
-.PRECIOUS: $(C_OUT)/%.c $(BC_OUT)/%.bc
-else
-.PRECIOUS: $(C_OUT)/%.c
-endif
+.PRECIOUS: $(BC_OUT)/%.bc $(C_OUT)/%.c $(TEMP_OUT)/%.o $(TEMP_OUT)/%.o.export
 
 ifndef C_ONLY
 include $(DEPS)
