--- a/.github/workflows/nix-ci.yml
+++ b/.github/workflows/nix-ci.yml
@@ -77,13 +77,11 @@ jobs:
           nix build $NIX_BUILD_ARGS .#cacheRoots -o push-build
       - name: Test
         run: |
-          nix build --keep-failed $NIX_BUILD_ARGS .#test -o push-test
+          nix build --keep-failed $NIX_BUILD_ARGS .#test -o push-test || ln -s /tmp/nix-build-* ./result
       - name: Test Summary
         uses: test-summary/action@v2
         with:
-          paths: |
-            result/test-results.xml
-            /tmp/nix-build-*/test-results.xml
+          paths: result/test-results.xml
         if: always()
       - name: Build manual
         run: |
